# stx

./: .clang-format  .gitignore  CMakeLists.txt  DESIGN.md  README.md  main.cpp
certs/: cert.pem  key.pem
include/crypto/: crypto.hpp  ssl_utils.hpp
include/network/: ssl_utils.hpp  tcp_server.hpp
include/protocols/: protocol.hpp  socket.hpp
scripts/: generate_data.bat  generate_data.sh  generate_debug_keys.bat  generate_debug_keys.sh  generate_keys.bat  generate_keys.sh  integration_tests.sh  multiple_concurrent_clients.py  multiple_sequential_clients.py  one_file_transfer.py  resume_tests.sh  solution.bat  solution.py  solution.sh  solution_disconnects.py  transfer_with_disconnects.py
src/crypto/: crypto.cpp  ssl_utils.cpp
src/main/: main.cpp  stx-recv.cpp  stx-send.cpp
src/network/: ssl_utils.cpp  tcp_server.cpp
src/protocols/: protocol_client.cpp  protocol_messages.cpp  protocol_server.cpp
tests/: CMakeLists.txt  crypto_test.cpp  crypto_tests.cpp  protocol_client_tests.cpp  protocol_messages_tests.cpp  protocol_server_tests.cpp  protocol_tests.cpp
